--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,10 @@ inputs:
   token:
     description: 'GitHub access token'
     required: true
+  branch:
+    description: 'Branch to commit to'
+    required: true
+    default: 'master'
   max_entries:
     description: 'Number of entries to display'
     required: true
